--- a/index.html
+++ b/index.html
@@ -59,15 +59,8 @@
 							</span>
 						</div>
 						<div class="form-actions">
-							<div class="row">
-								<div class="col-lg-6">
-									<input type="hidden" name="level" value="2"/>
-									<button type="submit" class="button-3 btn-blue" name="login" style="width: 50%">Login</button>
-								</div>
-								<div class="col-lg-6">
-									<a href="#" class="button-3 btn-blue pull-right">Login Sebagai Tamu</a>
-								</div>
-							</div>
+							<input type="hidden" name="level" value="2"/>
+							<button type="submit" class="button-3 btn-blue sm:w-full ml-2" name="login">Login</button>
 						</div>
 					</fieldset>
 					<div class="copyright">
